Opened 11 years ago

Closed 5 years ago

Last modified 5 years ago

#10253 closed bug (fixed)

ATA timeout prevents booting unless IDE DMA is disabled.

Reported by: Giova84 Owned by: nobody
Priority: normal Milestone: R1/beta2
Component: Drivers/Disk/ATA Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #12292
Platform: x86

Description

Haiku (hrev46447 and also previous nightlies from various months ago) fails to boot on a computer with the following specs: Motherboard: Asus Crosshair [1] Athlon 64 X2 Dualcore 4600 4 GiB DDR2 Ram Terratec Phase 22 PCI audiocard Atheros wifi PCI card Radeon x1300 PCI-E videocard Three S-ATA hdd One P-ATA hdd One S-ATA optical drive

When i attempt to boot Haiku on this computer (from live cd and also installed on the P-ATA HDD), it will hang to the fourth icon (the disk). If i select, in the boot menu, the option "Disable IDE DMA", will boot fine (from LIVE CD), instead, if i boot Haiku from the HDD, i have to select disable ide dma and also "use fail safe video mode". Because if i don't select fail safe video mode, the screen will remain black.

Syslog attached.

[1] http://www.asus.com/Motherboards/CROSSHAIR/#specifications

Attachments (4)

SYSLOG00.TXT (61.5 KB ) - added by Giova84 11 years ago.
ata_dma_setting.patch (823 bytes ) - added by anevilyak 11 years ago.
syslog_Linux.txt (90.1 KB ) - added by Giova84 11 years ago.
Syslog from Linux
syslog (203.3 KB ) - added by Giova84 11 years ago.
New syslog

Download all attachments as: .zip

Change History (35)

by Giova84, 11 years ago

Attachment: SYSLOG00.TXT added

comment:1 by anevilyak, 11 years ago

Component: System/Boot LoaderDrivers/Disk
Owner: changed from axeld to nobody

comment:2 by Giova84, 11 years ago

There is a way to disable IDE DMA using a setting file? (every time i have to disable in the boot menu) I looked at the kernel setting file but there are no entries about DMA. Can i blacklist a driver? I noticed that in latest nightlies was introduced a black list file for this purpose.

comment:3 by anevilyak, 11 years ago

The blacklist has nothing to do with it, as DMA is simply a setting for the IDE driver, rather than a different driver entirely. In any case, if I'm not mistaken, adding disable_ide_dma true in the kernel settings file should do the trick, though with the caveat that I haven't tested that, as I don't have a system that has this particular boot issue.

by anevilyak, 11 years ago

Attachment: ata_dma_setting.patch added

comment:4 by anevilyak, 11 years ago

patch: 01

comment:5 by anevilyak, 11 years ago

From a quick look, the ATA driver only looks to safe mode settings for that, and not the kernel file. The attached patch should address that, though again untested.

comment:6 by Giova84, 11 years ago

Unfortunately i can't build Haiku to test this patch (ATM i only have Haiku as development system, on a small partition). In anyway, thank you for your effort!

comment:7 by korli, 11 years ago

Can you try to boot without hard drives connected? Can you also try with "disable Local APIC"?

As a side note, you could benefit from MSI support in the IDE PCI driver. I could add this feature for you to test if you like.

comment:8 by Giova84, 11 years ago

Yesterday i've done many tests, i disconnect all hard drives and also with "Disable LOCAL APIC" (i've tried all available options, also in combination), but issues are still present.

Would be nice try the MSI support, i will be glad to test this feature.

comment:9 by korli, 11 years ago

By chance would you have a Linux installed also? A syslog could help to find out what's weird with this motherboard.

comment:10 by Giova84, 11 years ago

On that computer i don't have Linux. Can i do something with a live cd of Linux Mint?

comment:11 by diver, 11 years ago

Should work. You might need to do insmod befs to load linux bfs driver first.

comment:12 by korli, 11 years ago

Yes a live cd is enough to obtain a syslog.

comment:13 by korli, 11 years ago

Another test I forgot to ask sooner: please try to blacklist busses/ata/generic_ide_pci or busses/ata/legacy_ata in the bootmenu when booting from a live cd or usb disk.

comment:14 by Giova84, 11 years ago

If i blacklist generic_ide_pci, the boot issue is still here however. The legacy_ata, instead doesn't exist on my system. I attach the syslog from linux.

by Giova84, 11 years ago

Attachment: syslog_Linux.txt added

Syslog from Linux

in reply to:  13 comment:15 by Giova84, 11 years ago

Replying to korli:

try to blacklist busses/ata/generic_ide_pci or busses/ata/legacy_ata in the bootmenu when booting from a live cd or usb disk.

I have tried to do this from a real installation of Haiku, since if i attempt to select this option from a live cd, i got this error: #10262

in reply to:  14 comment:16 by korli, 11 years ago

Replying to Giova84:

If i blacklist generic_ide_pci, the boot issue is still here however. The legacy_ata, instead doesn't exist on my system. I attach the syslog from linux.

Sorry it's legacy_sata.

comment:17 by Giova84, 11 years ago

Also if I blacklist legacy_sata, Haiku won't boot.

comment:18 by korli, 11 years ago

Could you try to activate on-screen debug output and see what the latest messages are?

comment:19 by Giova84, 11 years ago

ata 0 error: device selection timeout ata 0-0 error: failed to send transfer request ata 0 error: device selection timeout ata 0-0 error: failed to send transfer request ata 0 error: device selection timeout ata 0-0 error: failed to send transfer request ata 0 error: device selection timeout

And so on.

comment:20 by Giova84, 11 years ago

Now i am on hrev46531, and i have some update about this ticket. When i start the live cd, Haiku will hang for some minutes (about 7 - 8) to the fourth icon (the disk) then will continue till the last icon and Haiku will start fine. But there are some other issues: in the mount list i can't see partitions from the P-ATA disk (i can only see partitions from the S-ATA disk and usb disks), and the IDE led on the computer case is always on.

I will attach, soon, a new syslog.

by Giova84, 11 years ago

Attachment: syslog added

New syslog

comment:21 by Giova84, 11 years ago

In this new syslog i can read a lot of errors about ATA. (since the line https://dev.haiku-os.org/attachment/ticket/10253/syslog#L999 ) And i've also found another issue: if i open any disk (S-ATA and also USB disks) in Tracker, Haiku will become unresponsive and i have to reset the system.

Last edited 11 years ago by Giova84 (previous) (diff)

comment:22 by luroh, 11 years ago

Blocking: 7665 added

comment:23 by pulkomandy, 10 years ago

Component: Drivers/DiskDrivers/Disk/ATA
Owner: changed from nobody to marcusoverhagen
Summary: Boot issuesATA timeout prevents booting unless IDE DMA is disabled.

comment:24 by Giova84, 10 years ago

Hi, I totally forgot this ticket, since about six months ago I've sold this computer.

comment:25 by marcusoverhagen, 10 years ago

Owner: changed from marcusoverhagen to nobody
Status: newassigned

comment:26 by diver, 8 years ago

Blocking: 12292 added

comment:27 by pulkomandy, 7 years ago

Patch migrated to Gerrit: https://review.haiku-os.org/56

comment:28 by pulkomandy, 7 years ago

patch: 10

comment:29 by waddlesplash, 7 years ago

Blocking: 7665 removed

comment:30 by pulkomandy, 5 years ago

Resolution: fixed
Status: assignedclosed

Patch applied in hrev54123. Closing as fixed as the original hardware showing the problem is not available for testing anymore.

comment:31 by pulkomandy, 5 years ago

Milestone: R1R1/beta2
Note: See TracTickets for help on using tickets.