adding disable_ide_dma true in the kernel settings file

From a quick look, the ATA driver only looks to safe mode settings for
that, and not the kernel file. The attached patch should address that.

ticket : #10253

Change-Id: I5e5c2474fecbd441a36a3600f7f16a964e0945dd
Reviewed-on: https://review.haiku-os.org/c/haiku/+/56
Reviewed-by: Jérôme Duval <jerome.duval@gmail.com>
Reviewed-by: Adrien Destugues <pulkomandy@gmail.com>