src/add-ons/kernel/bus_managers/ata/ATAChannel.cpp
@@ -32,15 +32,9 @@ ATAChannel::ATAChannel(device_node *node)
 	snprintf(fDebugContext, sizeof(fDebugContext), " %" B_PRIu32, fChannelID);
 
 	if (fUseDMA) {
-		void *settings = load_driver_settings(B_SAFEMODE_DRIVER_SETTINGS);
-		if (settings != NULL) {
-			if (get_driver_boolean_parameter(settings,
-				B_SAFEMODE_DISABLE_IDE_DMA, false, false)) {
-				TRACE_ALWAYS("disabling DMA because of safemode setting\n");
-				fUseDMA = false;
-			}
-
-			unload_driver_settings(settings);
+		if (get_safemode_boolean(B_SAFEMODE_DISABLE_IDE_DMA, false)) {
+			TRACE_ALWAYS("disabling DMA because of safemode setting\n");
+			fUseDMA = false;
 		}
 	}
 
